@@ -170,6 +170,26 @@
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bababa', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
 }
 
+.form-6 {
+    background: -moz-linear-gradient(top,  rgba(114,88,150,1) 0%, rgba(234,230,239,1) 85%, rgba(247,245,249,0.7) 94%, rgba(255,255,255,0) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(114,88,150,1)), color-stop(85%,rgba(234,230,239,1)), color-stop(94%,rgba(247,245,249,0.7)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(114,88,150,1) 0%,rgba(234,230,239,1) 85%,rgba(247,245,249,0.7) 94%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(114,88,150,1) 0%,rgba(234,230,239,1) 85%,rgba(247,245,249,0.7) 94%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(114,88,150,1) 0%,rgba(234,230,239,1) 85%,rgba(247,245,249,0.7) 94%,rgba(255,255,255,0) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(114,88,150,1) 0%,rgba(234,230,239,1) 85%,rgba(247,245,249,0.7) 94%,rgba(255,255,255,0) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#725896', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
+}
+
+.form-7 {
+    background: -moz-linear-gradient(top,  rgba(234,150,86,1) 0%, rgba(252,239,230,1) 85%, rgba(254,249,245,0.7) 94%, rgba(255,255,255,0) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(234,150,86,1)), color-stop(85%,rgba(252,239,230,1)), color-stop(94%,rgba(254,249,245,0.7)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(234,150,86,1) 0%,rgba(252,239,230,1) 85%,rgba(254,249,245,0.7) 94%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(234,150,86,1) 0%,rgba(252,239,230,1) 85%,rgba(254,249,245,0.7) 94%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(234,150,86,1) 0%,rgba(252,239,230,1) 85%,rgba(254,249,245,0.7) 94%,rgba(255,255,255,0) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(234,150,86,1) 0%,rgba(252,239,230,1) 85%,rgba(254,249,245,0.7) 94%,rgba(255,255,255,0) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ea9656', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
+}
+
 .confirmationMsg {
     color: green;
     font-weight: bold;
