@@ -4,6 +4,8 @@ Database update scripts can be found under sql/update directory.
 
 Version 1.7.1
 - fix for formdefinitions, when process_class not set post action should be 'email'
+- fixed loading the JS and CSS files in the admin interface
+- added CSS colors for 'File' and 'Select' types in admin interface
 
 Version 1.7.0
 - Added possibility to run external processing class, new form field 'Process class'
